# QuIC-360

./: README.md  pyproject.toml
dataset/raw/: test-refer.tsv  test.tsv  train.tsv  valid.tsv
src/quic_360/: __init__.py  push_to_hub.py
